--- a/26-Word Scramble/style.css
+++ b/26-Word Scramble/style.css
@@ -49,6 +49,10 @@ body {
 .details p b {
   font-weight: 500;
 }
+.time span {
+  font-weight: bold;
+  color: red;
+}
 .content input {
   width: 100%;
   height: 60px;
