Rock Paper Scissors

--- a/30-Whack-Male-game/style.css
+++ b/30-Whack-Male-game/style.css
@@ -46,7 +46,7 @@ h1 {
 
 .hole:after {
   display: block;
-  background: url(dirt.svg) bottom center no-repeat;
+  background: url("./misc-proto-dirt-pile.svg") bottom center no-repeat;
   background-size: contain;
   content: "";
   width: 100%;
@@ -57,7 +57,7 @@ h1 {
 }
 
 .mole {
-  background: url("mole.svg") bottom center no-repeat;
+  background: url("./mole2.svg") bottom center no-repeat;
   background-size: 60%;
   position: absolute;
   top: 100%;
@@ -68,4 +68,10 @@ h1 {
 
 .hole.up .mole {
   top: 0;
+}
+
+button {
+  position: absolute;
+  top: 40px;
+  left: 50%;
 }
