--- a/30-Whack-Male-game/style.css
+++ b/30-Whack-Male-game/style.css
@@ -72,6 +72,15 @@ h1 {
 
 button {
   position: absolute;
-  top: 40px;
+  top: 20px;
   left: 50%;
+  transform: translateX(-50%);
+  padding: 15px 42px;
+  border-radius: 4px;
+  border: 2px solid black;
+  background-color: transparent;
+}
+button:hover {
+  background-color: black;
+  color: #ffc600;
 }
