--- a/31-Calculator/style.css
+++ b/31-Calculator/style.css
@@ -7,3 +7,23 @@
 body{
     background: linear-gradient(to right,#87CEFA , #ffb6c1  );
 }
+
+.calculator-grid{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px , auto) repeat(5,100px);
+}
+.calculator-grid > button{
+    font-size: 2rem;
+    padding: 4px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 1px solid white;
+    cursor: pointer;
+    outline: none;
+}
+.calculator-grid > button:hover{
+    background-color: rgba(255, 255, 255, 0.9);
+}
