--- a/31-Calculator/style.css
+++ b/31-Calculator/style.css
@@ -40,5 +40,8 @@ body{
     justify-content: space-around;
     padding: 10px;
     word-wrap: break-word;
-    word-break: break-all;
+    word-break: brefak-all;
+}
+.output .previous-operand{
+    color: rgba(255, 255, 255, 0.75);
 }
