--- a/31-Calculator/style.css
+++ b/31-Calculator/style.css
@@ -44,4 +44,10 @@ body{
 }
 .output .previous-operand{
     color: rgba(255, 255, 255, 0.75);
+    font-size: 1.5rem;
+}
+
+.output .current-operand{
+    color: white;
+    font-size: 1.3rem;
 }
